--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
             <div class="news-content">
                 <h3 class="news-title"></h3>Результаты матчей Dota 2 на турнире PGL Wallachia.<p class="news-date">23 июня 2025</p>
                 <p class="news-excerpt">МАТЧИ:Aurora 0:2 Gladiators,Avulus 0:2 Heroic,Liquid 2:0 OG,Edge 0:2 Tundra Esports,AG Global 2:0 Wildcard,Xtreme 0:2 BetBoom.Live матчи:Team Spirit 0:1 NAVI,Nigma 1:0 Virtus.pro.
-    
+                </p>
+            </div>
+        </div>
     <div class="news-grid">
         <!-- Новость 15 -->
         <div class="news-card">
