--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <img src="https://avatars.mds.yandex.net/i?id=74aeb153eeef5547d3f154aacd4b1b2c032ff189-4256476-images-thumbs&n=13" alt="CS2" class="news-image">
             <div class="news-content">
                 <h3 class="news-title"></h3>Результаты матчей Dota 2 на турнире PGL Wallachia.<p class="news-date">23 июня 2025</p>
-                <p class="news-excerpt">МАТЧИ:Aurora 0:2 Gladiators,Avulus 0:2 Heroic,Liquid 2:0 OG,Edge 0:2 Tundra Esports,AG Global 2:0 Wildcard,Xtreme 0:2 BetBoom.Live матчи:Team Spirit 0:1 NAVI,Nigma 1:0 Virtus.pro.
+                <p class="news-excerpt">МАТЧИ:Aurora 0:2 Gladiators;Avulus 0:2 Heroic;Liquid 2:0 OG;Edge 0:2 Tundra Esports;AG Global 2:0 Wildcard;Xtreme 0:2 BetBoom.Live матчи:Team Spirit 0:1 NAVI;Nigma 1:0 Virtus.pro.
                 </p>
             </div>
         </div>
