--- a/index.html
+++ b/index.html
@@ -113,7 +113,17 @@
         </ul>
     </nav>
 
-<div class="news-grid">
+
+        <!-- Новость 11 -->
+        <div class="news-card">
+            <img src="https://avatars.mds.yandex.net/i?id=77f51dcb086c1ed9d27f56f7214156c4cac93d8b-5177173-images-thumbs&n=13" alt="Dota 2" class="news-image">
+            <div class="news-content">
+                <h3 class="news-title">LIVE Матчи PGL Wallachia </h3>
+                <p class="news-date">22 июня 2025</p>
+                <p class="news-excerpt">Team Spirit 0:1 NAVII;NIGMA 1:0 VIRTUS.PRO</p>
+            </div>
+        </div>
+
         <!-- Новость 15 -->
         <div class="news-card">
             <img src="https://avatars.mds.yandex.net/i?id=74aeb153eeef5547d3f154aacd4b1b2c032ff189-4256476-images-thumbs&n=13" alt="CS2" class="news-image">
