--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
                 <p class="news-excerpt">Team Spirit 0:1 NAVII;NIGMA 1:0 VIRTUS.PRO</p>
             </div>
         </div>
+</div>
+
 
 
         <!-- Новость 16 -->
