--- a/index.html
+++ b/index.html
@@ -114,14 +114,13 @@
     </nav>
 
     
-    <div class="news-grid">
-        <!-- Новость 15 -->
+     <!-- Новость 11 -->
         <div class="news-card">
-            <img src="https://staticg.sportskeeda.com/editor/2020/10/9f67a-16037256740747-800.jpg" alt="CS2" class="news-image">
+            <img src="https://avatars.mds.yandex.net/i?id=77f51dcb086c1ed9d27f56f7214156c4cac93d8b-5177173-images-thumbs&n=13" alt="Dota 2" class="news-image">
             <div class="news-content">
-                <h3 class="news-title">Team Vitality обыграла The Mongolz и стала чемпионом BLAST.tv Austin Major 2025  </h3>
+                <h3 class="news-title">LIVE Матчи PGL Wallachia </h3>
                 <p class="news-date">22 июня 2025</p>
-                <p class="news-excerpt">Team Vitality встретилась с The Mongolz в финале BLAST.tv Austin Major 2025 по CS2. Коллектив из Франции победил оппонента со счетом 2:1 (5:13 на Mirage, 13:4 на Dust2 и 13:6 на Inferno) и стал триумфатором чемпионата.И Viyality выйграли 500тыс.$</p>
+                <p class="news-excerpt">Team Spirit 0:1 NAVII;NIGMA 1:0 VIRTUS.PRO</p>
             </div>
         </div>
 
