--- a/index.html
+++ b/index.html
@@ -119,17 +119,26 @@
             <img src="https://avatars.mds.yandex.net/i?id=77f51dcb086c1ed9d27f56f7214156c4cac93d8b-5177173-images-thumbs&n=13" alt="Dota 2" class="news-image">
             <div class="news-content">
                 <h3 class="news-title">LIVE Матчи PGL Wallachia</h3>
-                <p class="news-date">15 июня 2025</p>
+                <p class="news-date">23 июня 2025</p>
                 <p class="news-excerpt">Team Spirit 1:1 NAVII;NIGMA 1:1 VIRTUS.PRO</p>
             </div>
         </div>
-        
+
+<div class="news-grid">
+        <!-- Новость 2 -->
+        <div class="news-card">
+            <img src="https://avatars.mds.yandex.net/i?id=74aeb153eeef5547d3f154aacd4b1b2c032ff189-4256476-images-thumbs&n=13" alt="Dota 2" class="news-image">
+            <div class="news-content">
+                <h3 class="news-title">Результаты матчей PGL WALLACHIA 2025</h3>
+                <p class="news-date">23 июня 2025</p>
+                <p class="news-excerpt">МАТЧИ:AURORA 0:2 Gladiators;Xtreme 0:2 BetBoom;AG Global 2:0 Wildcard;Edge 0:2 Tundra;Liquid 2:0 OG;AVULUS 0:2 Heroic.<div class="news-grid">
+               
         <!-- Новость 14 -->
         <div class="news-card">
             <img src="https://staticg.sportskeeda.com/editor/2020/10/9f67a-16037256740747-800.jpg" alt="CS2" class="news-image">
             <div class="news-content">
                 <h3 class="news-title">Team Vitality обыграла The Mongolz и стала чемпионом BLAST.tv Austin Major 2025  </h3>
-                <p class="news-date">22 июня 2025</p>
+                <p class="news-date">23 июня 2025</p>
                 <p class="news-excerpt">Team Vitality встретилась с The Mongolz в финале BLAST.tv Austin Major 2025 по CS2. Коллектив из Франции победил оппонента со счетом 2:1 (5:13 на Mirage, 13:4 на Dust2 и 13:6 на Inferno) и стал триумфатором чемпионата.И Viyality выйграли 500тыс.$</p>
             </div>
         </div>
@@ -139,7 +148,7 @@
             <img src="https://avatars.dzeninfra.ru/get-zen_doc/271828/pub_67f383d3d172de1b8dcf0299_67f383e9bef30f56714185c1/scale_1200" alt="Dota 2" class="news-image">
             <div class="news-content">
                 <h3 class="news-title">The International 2025: стала известна дата и место проведения.</h3>
-                <p class="news-date">20 июня 2025</p>
+                <p class="news-date">23 июня 2025</p>
                 <p class="news-excerpt">Дата проведения турнира 04.09.2025-14.09.2025.Место проведения турнира:Гамбург,Германия.Команды которые примут участие:Team Liquid,PARIVISION,BetBom Team,All Gamers Global,Gaimin Gladiators,Team Spirit,Team Falcons,Tundra Esports,Aurora Gaming,Natus Vincere,Xtreme Gaming,Nigma Galaxy,Wildcard Gaming,Heroic,Team Nemesis,BOOM Esports.
             </div>
         </div>
@@ -150,7 +159,7 @@
             <div class="news-content">
                 <h3 class="news-title">BetBoom Team обыграла Xtreme Gaming на групповом этапе PGL Wallachia Season 5</h3>
                 <p class="news-excerpt">BetBoom Team обыграла команду Xtreme Gaming на груповом этапе PGL Wallachia Season 5 со счетом 2:0.У BetBoom уже две победы на турнире.</p>
-                <p class="news-date">20 июня 2025</p>
+                <p class="news-date">23 июня 2025</p>
             </div>
         </div>
 
