--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     <div class="news-grid">
         <!-- Новость 1 -->
         <div class="news-card">
-            <img src="https://avatars.mds.yandex.net/i?id=77f51dcb086c1ed9d27f56f7214156c4cac93d8b-5177173-images-thumbs&n=13" alt="Dota 2" class="news-image">
+            <img src="https://avatars.mds.yandex.net/i?id=74aeb153eeef5547d3f154aacd4b1b2c032ff189-4256476-images-thumbs&n=13" alt="Dota 2" class="news-image">
             <div class="news-content">
-                <h3 class="news-title">LIVE Матчи PGL Wallachia</h3>
+                <h3 class="news-title">Результаты матчей PGL WALLACHIA 2025</h3>
                 <p class="news-date">23 июня 2025</p>
-                <p class="news-excerpt">Team Spirit 1:1 NAVII;NIGMA 1:1 VIRTUS.PRO</p>
+                <p class="news-excerpt">МАТЧИ:AURORA 0:2 Gladiators;Xtreme 0:2 BetBoom;AG Global 2:0 Wildcard;Edge 0:2 Tundra;Liquid 2:0 OG;AVULUS 0:2 Heroic:Nigma 2:1 VIRTUS.PRO;Team Spirit 1:2 NAVI</p>
             </div>
         </div>
 
