--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="news-card">
             <img src="https://avatars.mds.yandex.net/i?id=2a000001979b48d6848a855161aafc9fb0ff-996501-fast-images&n=13" slt="Dota 2" class="news-image">
             <div class="news-content">
-                <h3 class="news-title">Капитан команды(apEX) Vitality завоевал 33 трофея </h3>
+                <h3 class="news-title">Капитан команды Vitality (apEX) завоевал 33 трофея </h3>
                 <p class="news-excerpt">Самые значиельные трофеи в карере apEX стали:BLAST.tv Austin Major 2025,
 BLAST.tv Paris Major 2023,
 DreamHack Cluj-Napoca 2015,
