--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </ul>
     </nav>
 
-       <div class="news-card"> 
+       <div class="news-grid"> 
         <!-- Новость 1 -->
         <div class="news-card">
             <img src="https://avatars.mds.yandex.net/i?id=74aeb153eeef5547d3f154aacd4b1b2c032ff189-4256476-images-thumbs&n=13" alt="Dota 2" class="news-image">
