--- a/index.html
+++ b/index.html
@@ -114,7 +114,16 @@
     </nav>
 
        <div class="news-grid">
-
+<!-- Новость 25 -->
+        <div class="news-card">
+           <img src="" slt="" class="news-imag">
+           <div class="news-content">
+               <h3 class="news-title">Team Spirit сделал очень неожидаемы не для кого камбек и вышли в плей-офф</h3>
+               <p class="news-date">23.06.25 21:33</p>
+               <p class="news-excerpt">Team Spirit в матче с NAVI совершили не для кого неожидаемый камбек.
+Spirit со счетом 1:1 проигрывали по золоту и по башням,но блягодаря воле и стремлению они выиграли и вышли в плей-офф</p>
+            </div>
+        </div>
  
         <!-- Новость 1 -->
         <div class="news-card">
