--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
        <div class="news-grid">
 <!-- Новость 25 -->
         <div class="news-card">
-           <img src="" slt="" class="news-imag">
+           <img src="https://cybersport-img.cdnvideo.ru/images/as-is/plain/50/5068dd38-75cc-4745-a25a-7af890441642.jpg@jpg" slt="" class="news-imag">
            <div class="news-content">
                <h3 class="news-title">Team Spirit сделал очень неожидаемы не для кого камбек и вышли в плей-офф</h3>
                <p class="news-date">23.06.25 21:33</p>
