--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
        <div class="news-grid">
 <!-- Новость 25 -->
         <div class="news-card">
-           <img src="https://cs14.pikabu.ru/avatars/3671/x3671234-291982515.png" slt="" class="news-imag">
+           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Team_Spirit_new_em.svg/768px-Team_Spirit_new_em.svg.png" slt="" class="news-imag">
            <div class="news-content">
                <h3 class="news-title">Team Spirit сделал очень неожидаемы не для кого камбек и вышли в плей-офф</h3>
                <p class="news-date">23.06.25 21:33</p>
