--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
        <div class="news-grid">
 <!-- Новость 25 -->
         <div class="news-card">
-           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Team_Spirit_new_em.svg/768px-Team_Spirit_new_em.svg.png" slt="" class="news-imag">
+           <img src="https://sun1-56.userapi.com/impg/0atBZxx88aBaazbNWe3rpivlKiRXdiUg-6xSQQ/KpgBi7qyGiQ.jpg?size=520x0&quality=95&sign=cf1fd4c2d7476bef83c0aff9ef53a33d" slt="" class="news-imag">
            <div class="news-content">
                <h3 class="news-title">Team Spirit сделал очень неожидаемы не для кого камбек и вышли в плей-офф</h3>
                <p class="news-date">23.06.25 21:33</p>
