--- a/index.html
+++ b/index.html
@@ -114,7 +114,17 @@
     </nav>
 
        <div class="news-grid">
-<!-- Новость 25 -->
+<!-- Новость 18 -->
+        <div class="news-card">
+            <img src="https://avatars.mds.yandex.net/i?id=6af98af2626537d999c720e35753339e_l-10555242-images-thumbs&n=13" slt="Dota 2" class="news-image">
+            <div class="news-content">
+                <h3 class="news-title">Сегодня пройдет Dota 2 PGL Wallachia</h3>
+                <p class="news-excerpt">Сегодня пройдут акие мати как:Aurora 2:0 Tundra;Liquid 0:0 Tidebound;NAVI 0:0 BetBoom;Widcard 2:0 OG;Xtreme 0:0 Nigma;Edge 0:0 Heroic</p>
+                <p class="news-date">24.06.25 12:37</p>
+            </div>
+        </div>
+
+<!-- Новость 10 -->
         <div class="news-card">
            <img src="https://ru.csgo.com/thumb/post/size-og-image/2022/02/63182/NjMxODI0eDRQYXdPSUx4.png" slt="" class="news-imag">
            <div class="news-content">
@@ -161,16 +171,6 @@ Spirit со счетом 1:1 проигрывали по золоту и по б
             <div class="news-content">
                 <h3 class="news-title">BetBoom Team обыграла Xtreme Gaming на групповом этапе PGL Wallachia Season 5</h3>
                 <p class="news-excerpt">BetBoom Team обыграла команду Xtreme Gaming на груповом этапе PGL Wallachia Season 5 со счетом 2:0.У BetBoom уже две победы на турнире.</p>
-                <p class="news-date">23 июня 2025</p>
-            </div>
-        </div>
-
-         <!-- Новость 18 -->
-        <div class="news-card">
-            <img src="https://avatars.mds.yandex.net/i?id=6af98af2626537d999c720e35753339e_l-10555242-images-thumbs&n=13" slt="Dota 2" class="news-image">
-            <div class="news-content">
-                <h3 class="news-title">Сегодня пройдет Dota 2 PGL Wallachia</h3>
-                <p class="news-excerpt">Сегодня пройдут акие мати как:Team Liquid VS OG,Edge VS Tundra Esports,Avulus VS Heroic,Team Aurora VS Gaimin Gladiators,Nigma Galaxy VS Virtus.Pro,Team Spirit VS Natus Vincere.</p>
                 <p class="news-date">23 июня 2025</p>
             </div>
         </div>
