--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <!-- Новость 10 -->
         <div class="news-card">
-           <img src="https://ru.csgo.com/thumb/post/size-og-image/2022/02/63182/NjMxODI0eDRQYXdPSUx4.png" slt="" class="news-imag">
+           <img src="https://sun9-68.userapi.com/impg/jcbDhtzmVdYimej1OCozBavcqiiuH2VC7U4FZQ/Wnm15LPkd60.jpg?size=604x604&quality=96&sign=b2c8f302f3a5ac9d5b75612c92f166b0&type=album" slt="" class="news-imag">
            <div class="news-content">
                <h3 class="news-title">Team Spirit сделал очень неожидаемы не для кого камбек и вышли в плей-офф</h3>
                <p class="news-date">23.06.25 21:33</p>
