--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
        <div class="news-grid">
 <!-- Новость 18 -->
         <div class="news-card">
-            <img src="https://avatars.mds.yandex.net/i?id=6af98af2626537d999c720e35753339e_l-10555242-images-thumbs&n=13" slt="Dota 2" class="news-image">
+            <img src="https://sun9-54.userapi.com/impg/EEmh5B-J9VWeRVDKgYbcL-dbTX6iuqkmegl73g/6X1I86j34PE.jpg?size=130x130&quality=95&sign=e6040cd145dc9cff757c62e3d2a29267&c_uniq_tag=GdogjnfELcxxQqqz4O2-RIkmVHvUCoiK-X-AqSR9oQk&type=album" slt="Dota 2" class="news-image">
             <div class="news-content">
                 <h3 class="news-title">Сегодня пройдет Dota 2 PGL Wallachia</h3>
                 <p class="news-date">24.06.25 12:37</p>
