--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
  <div class="news-card">
  <img src="blob:https://web.telegram.org/62460d63-b47e-4583-8d4a-b79901287756" slt="Dota 2" class="news-image"> 
 <div class="news-content">
- <h3 class="news-title">Статистика Zywoo прошлого ажора и этого.</h3>
+ <h3 class="news-title">Статистика Zywoo прошлого мажора и этого.</h3>
  <p class="news-date">24.06.25 12:56</p>
  <p class="news-excerpt">Зайву вошел в свою лучшую форму так кка его статистика это сезона удивляет.</p>
  </div>
