--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <!-- Новость 20 -->
  <div class="news-card">
- <img src="blob:https://web.telegram.org/62460d63-b47e-4583-8d4a-b79901287756" slt="Dota 2" class="news-image"> 
+ <img src=https://img-cdn.hltv.org/gallerypicture/56WmHGg5UsgpAC9rom5qsI.jpg?auto=compress&ixlib=java-2.1.0&m=%2Fm.png&mw=107&mx=20&my=474&q=75&w=800&s=7efee8da71d0616fe236d9ee17cc74d1" slt="Dota 2" class="news-image"> 
 <div class="news-content">
  <h3 class="news-title">Статистика Zywoo прошлого мажора и этого.</h3>
  <p class="news-date">24.06.25 12:56</p>
