--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <div class="news-content">
  <h3 class="news-title">Статистика Zywoo прошлого мажора и этого.</h3>
  <p class="news-date">24.06.25 12:56</p>
- <p class="news-excerpt">Зайву вошел в свою лучшую форму так кка его статистика это сезона удивляет.</p>
+ <p class="news-excerpt">Зайву вошел в свою лучшую форму так как его статистика этого сезона удивляет.</p>
  </div>
  </div>
 
